Fixed a bug with overflowing images in the logo

--- a/frontend/packages/volto-light-theme/src/theme/_header.scss
+++ b/frontend/packages/volto-light-theme/src/theme/_header.scss
@@ -15,12 +15,14 @@
       max-height: 80px;
       flex: 1 1 0;
       align-self: center;
-
       a {
         display: block;
 
         img {
+          // max-height: 80px;
+          width: auto;
           max-width: 100%;
+          max-height: 80px;
           height: auto;
         }
       }
